--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header><span class="header-title">Klasoverzicht</span></header>
+    <header>
+      <span class="header-title">Klasoverzicht - Leesbaarheid</span>
+    </header>
 
     <main class="dashboard-table">
       <table id="dashboard-table"></table>
