--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         title="Selecteer criterium"
       >
         <option value="readability" selected>Leesbaarheid</option>
-        <option value="concepts">Codeconcepten</option>
+        <option value="concepts">Code Concepten</option>
         <option value="testDebug">Testen & Debuggen</option>
         <option value="time">Tijdsbesteding</option>
       </select>
@@ -28,6 +28,15 @@
       >
         <option value="byStudent" selected>Groepeer per student</option>
         <option value="byExercise">Groepeer per oefening</option>
+      </select>
+      <select
+        id="bar-orientation"
+        class="criterion-select"
+        title="Staafrichting"
+        style="display: none"
+      >
+        <option value="vertical" selected>Verticale staven</option>
+        <option value="horizontal">Horizontale staven</option>
       </select>
     </header>
 
