Update graph content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <option value="readability" selected>Leesbaarheid</option>
         <option value="concepts">Code Concepten</option>
         <option value="testDebug">Testen & Debuggen</option>
-        <option value="time">Tijdsbesteding</option>
+        <!--<option value="time">Tijdsbesteding</option>-->
       </select>
       <select
         id="time-grouping"
