--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </header>
 
     <main class="dashboard-table">
+      <h3>TODO info</h3>
       <table id="dashboard-table"></table>
       <div id="graph-view" class="graph-view" style="display: none"></div>
     </main>
