--- a/students/exercise.html
+++ b/students/exercise.html
@@ -18,6 +18,7 @@
     </header>
     <main>
       <h2 id="exercise-title"></h2>
+      <h3>TODO info</h3>
       <div class="controls" id="controls-readability">
         <label
           ><input type="checkbox" id="highlightFunctionCase" checked />
