--- a/students/exercise.html
+++ b/students/exercise.html
@@ -18,6 +18,7 @@
     </header>
     <main>
       <h2 id="exercise-title"></h2>
+      <h3 id="exercise-description"></h3>
       <div class="version-buttons">
         <button id="version1Btn" class="version-btn">Versie 1</button>
         <button id="version2Btn" class="version-btn">Versie 2</button>
@@ -88,6 +89,10 @@
             margin-bottom: 10px;
           "
         ></div>
+        <label class="advice" style="display: none"
+          ><input type="checkbox" id="toggleAdviceTestDebug" checked />
+          Advies</label
+        >
       </div>
       <div class="container">
         <div class="editor-container">
