Hide byStudent/byExercise dropdown for testdebug

--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
         <option value="testDebug">Testen & Debuggen</option>
         <!--<option value="time">Tijdsbesteding</option>-->
       </select>
-      <select
+      <!-- <select
         id="time-grouping"
         class="criterion-select"
         title="Groepering tijd"
         style="display: none"
       >
+      
         <option value="byStudent" selected>Groepeer per student</option>
         <option value="byExercise">Groepeer per oefening</option>
-      </select>
+      </select>-->
       <select
         id="bar-orientation"
         class="criterion-select"
